--- a/test/index.html
+++ b/test/index.html
@@ -1,195 +1,4 @@
-import { useState, useEffect } from "react"
-import {
-  Button,
-  Dialog,
-  DialogContent,
-  DialogHeader,
-  DialogTitle,
-  DialogDescription,
-  DialogFooter,
-  DialogBody,
-  FormControl,
-  FormLabel,
-  Input,
-  Textarea,
-  Checkbox,
-  Stack,
-  Select,
-  useToast,
-} from "@chakra-ui/react"
-import { useForm } from "react-hook-form"
-import { useQuery, useMutation, useQueryClient } from "@tanstack/react-query"
-
-interface CreateCategoryModalProps {
-  isOpen: boolean
-  onClose: () => void
-  category?: any
-  mode?: "create" | "edit"
-}
-
-interface CategoryFormData {
-  restrictionCategoryName: string
-  description: string
-  fundGroup: string
-  fundNames: string[]
-  availableFor: string[]
-}
-
-// Mock API functions for dependent data
-const fetchFundNames = async (fundGroup: string) => {
-  await new Promise(resolve => setTimeout(resolve, 500))
-  const fundNamesByGroup: Record<string, string[]> = {
-    Volantis: ["1798 Volantis Catalyst", "Volantis Growth Fund", "Volantis Value Fund"],
-    "LOIM IT": ["LOIM Technology Fund", "LOIM Innovation Fund", "LOIM Digital Fund"],
-    "ESG Funds": ["ESG Global Fund", "ESG Sustainable Fund", "ESG Impact Fund"],
-  }
-  return fundNamesByGroup[fundGroup] || []
-}
-
-const fetchAvailableFor = async (fundGroup: string) => {
-  await new Promise(resolve => setTimeout(resolve, 500))
-  const availableForByGroup: Record<string, string[]> = {
-    Volantis: ["Developers", "Portfolio Managers", "Risk Managers"],
-    "LOIM IT": ["LOAM IT", "Portfolio Managers", "System Administrators"],
-    "ESG Funds": ["ESG Team", "Compliance", "Audit"],
-  }
-  return availableForByGroup[fundGroup] || []
-}
-
-export function CreateCategoryModal({
-  isOpen,
-  onClose,
-  category,
-  mode = "create",
-}: CreateCategoryModalProps) {
-  const {
-    register,
-    handleSubmit,
-    reset,
-    watch,
-    setValue,
-    formState: { errors },
-  } = useForm<CategoryFormData>({
-    defaultValues: {
-      restrictionCategoryName: "",
-      description: "",
-      fundGroup: "",
-      fundNames: [],
-      availableFor: [],
-    },
-  })
-
-  const queryClient = useQueryClient()
-  const toast = useToast()
-  const [selectedFundGroup, setSelectedFundGroup] = useState("")
-  const fundGroup = watch("fundGroup")
-  const selectedFundNames = watch("fundNames") || []
-  const selectedAvailableFor = watch("availableFor") || []
-
-  // Fetch fund names
-  const { data: fundNames = [] } = useQuery({
-    queryKey: ["fund-names", fundGroup],
-    queryFn: () => fetchFundNames(fundGroup),
-    enabled: !!fundGroup,
-  })
-
-  // Fetch availableFor
-  const { data: availableForOptions = [] } = useQuery({
-    queryKey: ["available-for", fundGroup],
-    queryFn: () => fetchAvailableFor(fundGroup),
-    enabled: !!fundGroup,
-  })
-
-  // Reset when fund group changes
-  useEffect(() => {
-    if (fundGroup !== selectedFundGroup) {
-      setValue("fundNames", [])
-      setValue("availableFor", [])
-      setSelectedFundGroup(fundGroup)
-    }
-  }, [fundGroup, selectedFundGroup, setValue])
-
-  // Populate edit mode
-  useEffect(() => {
-    if (mode === "edit" && category && isOpen) {
-      reset({
-        restrictionCategoryName: category.restrictionCategoryName || "",
-        description: category.description || "",
-        fundGroup: category.fundGroup || "",
-        fundNames: category.fundName ? category.fundName.split(", ") : [],
-        availableFor: category.availableFor ? category.availableFor.split(", ") : [],
-      })
-      setSelectedFundGroup(category.fundGroup || "")
-    } else if (mode === "create" && isOpen) {
-      reset({
-        restrictionCategoryName: "",
-        description: "",
-        fundGroup: "",
-        fundNames: [],
-        availableFor: [],
-      })
-      setSelectedFundGroup("")
-    }
-  }, [mode, category, isOpen, reset])
-
-  const createMutation = useMutation({
-    mutationFn: async (data: CategoryFormData) => {
-      await new Promise(resolve => setTimeout(resolve, 1000))
-      return {
-        ...data,
-        id: mode === "edit" ? category?.id : Date.now().toString(),
-        fundName: data.fundNames.join(", "),
-        availableFor: data.availableFor.join(", "),
-        lastModifiedBy: "current_user",
-        lastModifiedOn: new Date().toISOString().split("T")[0],
-      }
-    },
-    onSuccess: () => {
-      queryClient.invalidateQueries({ queryKey: ["restriction-categories"] })
-      toast({
-        title: mode === "edit" ? "Category Updated" : "Category Created",
-        description: `The restriction category has been ${
-          mode === "edit" ? "updated" : "created"
-        } successfully.`,
-        status: "success",
-        duration: 3000,
-        isClosable: true,
-      })
-      reset()
-      onClose()
-    },
-    onError: () => {
-      toast({
-        title: "Error",
-        description: `Failed to ${mode} restriction category.`,
-        status: "error",
-        duration: 3000,
-        isClosable: true,
-      })
-    },
-  })
-
-  const onSubmit = (data: CategoryFormData) => {
-    createMutation.mutate(data)
-  }
-
-  return (
-    <Dialog open={isOpen} onOpenChange={onClose}>
-      <DialogContent>
-        <form onSubmit={handleSubmit(onSubmit)}>
-          <DialogHeader>
-            <DialogTitle>
-              {mode === "edit" ? "Edit Restriction Category" : "Create Restriction Category"}
-            </DialogTitle>
-            <DialogDescription>
-              {mode === "edit"
-                ? "Update details of the restriction category."
-                : "Fill in details to create a new restriction category."}
-            </DialogDescription>
-          </DialogHeader>
-
-          <DialogBody>
-            <FormControl isInvalid={!!errors.restrictionCategoryName}>
+  <FormControl isInvalid={!!errors.restrictionCategoryName}>
               <FormLabel>Category Name</FormLabel>
               <Input
                 {...register("restrictionCategoryName", { required: "Category Name is required" })}
@@ -264,7 +73,7 @@ export function CreateCategoryModal({
             <Button
               type="submit"
               ml={3}
-              isLoading={createMutation.isPending}
+              loading={createMutation.isPending}
               colorScheme="blue"
             >
               {mode === "edit" ? "Update" : "Create"}
@@ -272,6 +81,4 @@ export function CreateCategoryModal({
           </DialogFooter>
         </form>
       </DialogContent>
-    </Dialog>
-  )
-}
+    </DialogRoot>
