--- a/test/index.html
+++ b/test/index.html
@@ -1,31 +1,1 @@
-<CheckboxGroup
-  value={selectedFundNames}
-  onChange={(newValues: string[]) => {
-    setSelectedFundNames(newValues)
-    setValue("fundNames", newValues)
-  }}
->
-  <Stack>
-    {fundNames.map((name) => (
-      <Checkbox key={name} value={name}>
-        {name}
-      </Checkbox>
-    ))}
-  </Stack>
-</CheckboxGroup>
-
-<CheckboxGroup
-  value={selectedAvailableFor}
-  onChange={(newValues: string[]) => {
-    setSelectedAvailableFor(newValues)
-    setValue("availableFor", newValues)
-  }}
->
-  <Stack>
-    {availableForOptions.map((option) => (
-      <Checkbox key={option} value={option}>
-        {option}
-      </Checkbox>
-    ))}
-  </Stack>
-</CheckboxGroup>
+const [selectedFundNames, setSelectedFundNames] = useState<string[]>([])
