--- a/test/index.html
+++ b/test/index.html
@@ -1,13 +1,13 @@
-const fetchAvailableFor = async (fundGroup: string) => {
-  await new Promise((r) => setTimeout(r, 500))
-  const availableForByGroup: Record<string, string[]> = {
-    Volantis: ['Developers', 'Portfolio Managers', 'Risk Managers'],
-    'LOIM IT': ['LOAM IT', 'Portfolio Managers', 'System Administrators'],
-    'ESG Funds': ['ESG Team', 'Compliance', 'Audit'],
+const fetchAvailableFor = async () => {
+  try {
+    const response = await fetch("http://nycuapp03.biz.lodh.com:8787/EntitlementGroups");
+    if (!response.ok) {
+      throw new Error("Failed to fetch available for options");
+    }
+    const data: string[] = await response.json();
+    return data || [];
+  } catch (error) {
+    console.error("Error fetching Available For:", error);
+    return [];
   }
-  return availableForByGroup[fundGroup] || []
-}
-
-    http://nycuapp03.biz.lodh.com:8787/EntitlementGroups
-
-    ["AllFundPmPortal","Audit","BRM","Compliance","Developers","Developers Geneva","Developes India","HR","LOAM IT","Operation Users","Portfolio Managers","Portfolio Managers - Credit","Risk Power User","Risk Users","Support","Test","Traders","Volantis Users"]
+};
