--- a/test/index.html
+++ b/test/index.html
@@ -1,1 +1,12 @@
+return fetch(http://nycuapp03.biz.lodh.com:8787/RestrictionCategory, {
+      method: 'PUT',
+      credentials: 'include',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+
 {"id":6,"name":"Volantis RL","description":"Volantis RL11","groupNames":["Developers","Developers Geneva","Volantis Users"],"funds":[{"fundGroupName":"Volantis","fundName":"1798 Volantis Catalyst II Ltd","enfusionFundId":460374},{"fundGroupName":"Volantis","fundName":"Progeny 3","enfusionFundId":658054},{"fundGroupName":"Volantis","fundName":"Notre Dame","enfusionFundId":710383},{"fundGroupName":"Volantis","fundName":"LMAP Epsilon Limited","enfusionFundId":460363},{"fundGroupName":"Volantis","fundName":"1798 Volantis Catalyst I Ltd","enfusionFundId":460373},{"fundGroupName":"Volantis","fundName":"1798 Volantis Catalyst III Ltd","enfusionFundId":632111},{"fundGroupName":"Volantis","fundName":"1798 UK Small Cap Best Ideas Ltd","enfusionFundId":460375},{"fundGroupName":"Volantis","fundName":"Delfinco LP","enfusionFundId":602392},{"fundGroupName":"Volantis","fundName":"IMCO - IMAP Cayman SPC","enfusionFundId":565382},{"fundGroupName":"Volantis","fundName":"1798 Volantis Fund Ltd","enfusionFundId":460372},{"fundGroupName":"Volantis","fundName":"The Strathclyde Pension Fund","enfusionFundId":460366}]}
+
+
+
+
